--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,10 @@
 ---
-const { bgDark, id } = Astro.props;
+const { bgDark, id, className } = Astro.props;
 ---
 
-<div id={id} class={`parallax-this ${bgDark ? 'bg-gradient-to-br from-[#0C0C21] from-25% to-[#1C4262]' : 'bg-white'} grid box-border rounded-[var(--tile-border-radius)] overflow-hidden z-10 min-h-[750px] col-span-6`}>
-    <slot />
+<div
+  id={id}
+  class={`parallax-this ${bgDark ? "bg-gradient-to-br from-[#0C0C21] from-25% to-[#1C4262]" : "bg-white"} ${className} grid box-border rounded-[var(--tile-border-radius)] overflow-hidden z-10 min-h-[750px] col-span-6`}
+>
+  <slot />
 </div>
