workout section done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
-import Hero from '@/components/Hero.astro';
-import AppleIntelligence from '@/components/AppleIntelligence.astro';
-import OnTheGo from '@/components/OnTheGo.astro';
-import Layout from '@/layouts/Layout.astro';
-import InTheCar from '@/components/InTheCar.astro';
+import Hero from "@/components/Hero.astro";
+import AppleIntelligence from "@/components/AppleIntelligence.astro";
+import OnTheGo from "@/components/OnTheGo.astro";
+import Layout from "@/layouts/Layout.astro";
+import InTheCar from "@/components/InTheCar.astro";
+import WorkingOut from "@/components/WorkingOut.astro";
 ---
 
 <Layout>
-	<Hero />
-	<AppleIntelligence />
-	<OnTheGo />
-	<InTheCar />
+  <Hero />
+  <AppleIntelligence />
+  <OnTheGo />
+  <InTheCar />
+  <WorkingOut />
 </Layout>
