feature: in the kitchen section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import OnTheGo from "@/components/OnTheGo.astro";
 import Layout from "@/layouts/Layout.astro";
 import InTheCar from "@/components/InTheCar.astro";
 import WorkingOut from "@/components/WorkingOut.astro";
+import InTheKitchen from "@/components/InTheKitchen.astro";
 ---
 
 <Layout>
@@ -13,4 +14,5 @@ import WorkingOut from "@/components/WorkingOut.astro";
   <OnTheGo />
   <InTheCar />
   <WorkingOut />
+  <InTheKitchen />
 </Layout>
