core: move all sections to a /section folder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Hero from "@/components/Hero.astro";
-import AppleIntelligence from "@/components/AppleIntelligence.astro";
-import OnTheGo from "@/components/OnTheGo.astro";
+import Hero from "@/sections/Hero.astro";
+import AppleIntelligence from "@/sections/AppleIntelligence.astro";
+import OnTheGo from "@/sections/OnTheGo.astro";
 import Layout from "@/layouts/Layout.astro";
-import InTheCar from "@/components/InTheCar.astro";
-import WorkingOut from "@/components/WorkingOut.astro";
-import InTheKitchen from "@/components/InTheKitchen.astro";
+import InTheCar from "@/sections/InTheCar.astro";
+import WorkingOut from "@/sections/WorkingOut.astro";
+import InTheKitchen from "@/sections/InTheKitchen.astro";
 ---
 
 <Layout>
