--- a/src/sections/OnTheGo.astro
+++ b/src/sections/OnTheGo.astro
@@ -1,6 +1,6 @@
 ---
-import BgGradientSection from "./BgGradientSection.astro";
-import OnTheGoCards from "./OnTheGoCards.astro";
+import BgGradientSection from "@/components/BgGradientSection.astro";
+import OnTheGoCards from "@/components/OnTheGoCards.astro";
 ---
 
 <BgGradientSection
