--- a/src/sections/WorkingOut.astro
+++ b/src/sections/WorkingOut.astro
@@ -1,6 +1,6 @@
 ---
-import BgGradientSection from "./BgGradientSection.astro";
-import Card from "./Card.astro";
+import BgGradientSection from "@/components/BgGradientSection.astro";
+import Card from "@/components/Card.astro";
 ---
 
 <BgGradientSection
