feature: winding down section done!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Layout from "@/layouts/Layout.astro";
 import InTheCar from "@/sections/InTheCar.astro";
 import WorkingOut from "@/sections/WorkingOut.astro";
 import InTheKitchen from "@/sections/InTheKitchen.astro";
+import WindingDown from "@/sections/WindingDown.astro";
 ---
 
 <Layout>
@@ -15,4 +16,5 @@ import InTheKitchen from "@/sections/InTheKitchen.astro";
   <InTheCar />
   <WorkingOut />
   <InTheKitchen />
+  <WindingDown />
 </Layout>
