feature: private digital assistant section done!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import InTheCar from "@/sections/InTheCar.astro";
 import WorkingOut from "@/sections/WorkingOut.astro";
 import InTheKitchen from "@/sections/InTheKitchen.astro";
 import WindingDown from "@/sections/WindingDown.astro";
+import PrivateDigital from "@/sections/PrivateDigital.astro";
 ---
 
 <Layout>
@@ -17,4 +18,5 @@ import WindingDown from "@/sections/WindingDown.astro";
   <WorkingOut />
   <InTheKitchen />
   <WindingDown />
+  <PrivateDigital />
 </Layout>
