--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import WorkingOut from "@/sections/WorkingOut.astro";
 import InTheKitchen from "@/sections/InTheKitchen.astro";
 import WindingDown from "@/sections/WindingDown.astro";
 import PrivateDigital from "@/sections/PrivateDigital.astro";
+import SiriActions from "@/sections/SiriActions.astro";
 ---
 
 <Layout>
@@ -19,4 +20,5 @@ import PrivateDigital from "@/sections/PrivateDigital.astro";
   <InTheKitchen />
   <WindingDown />
   <PrivateDigital />
+  <SiriActions />
 </Layout>
