further with siri section done!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import InTheKitchen from "@/sections/InTheKitchen.astro";
 import WindingDown from "@/sections/WindingDown.astro";
 import PrivateDigital from "@/sections/PrivateDigital.astro";
 import SiriActions from "@/sections/SiriActions.astro";
+import FurtherWIth from "@/sections/FurtherWIth.astro";
 ---
 
 <Layout>
@@ -21,4 +22,5 @@ import SiriActions from "@/sections/SiriActions.astro";
   <WindingDown />
   <PrivateDigital />
   <SiriActions />
+  <FurtherWIth />
 </Layout>
