--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,7 +136,7 @@ html {
 
 @media only screen and (min-width: 1441px) {
     :root {
-        --section-content-wide: 1344px;
+        --section-content-wide: 1344px !important;
     }
 }
 
